[project]
name = "portal"
version = ""
description = ""
authors = [
    {name = "Loc Mai", email = "locmai0201@gmail.com"},
]
dependencies = [
    "fastapi",
    "loguru"]
requires-python = ">=3.10"
license = {text = "MIT"}

[project.urls]
homepage = ""

[project.optional-dependencies]
[tool]
[tool.pdm]
[tool.pdm.dev-dependencies]
dev = [
    "autopep8",
    "pytest",
    "pytest-cov",
    "uvicorn[standard]",
    "flake8",
    "requests",
]

[build-system]
requires = ["pdm-pep517"]
build-backend = "pdm.pep517.api"

[tool.pdm.scripts]
dev = "uvicorn main:app --reload"
build = "docker build ."
lint = "flake8 ."
test = "pytest -q ./tests --cov=portal tests"